--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" href="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/warzone/common/favicon/favicon.ico"/>
-<title>WZ Data Analysis</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>WZ PlayerData Analysis</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <link rel="icon" href="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/warzone/common/favicon/favicon.ico"/>
 
 
